--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         .comparison-table thead th:first-child { border-radius: var(--radius) 0 0 0; }
         .comparison-table thead th:last-child { border-radius: 0 var(--radius) 0 0; }
         .comparison-table thead th.highlight { background: var(--teal); }
-        .comparison-table td { padding: 14px 24px; font-size: 14px; border-bottom: 1px solid var(--gray-200); }
+        .comparison-table td { padding: 14px 24px; font-size: 14px; border-bottom: 1px solid var(--gray-200); background: white; }
         .comparison-table tr:last-child td { border-bottom: none; }
         .comparison-table td:first-child { font-weight: 600; color: var(--dark); }
         .comparison-table .check { color: var(--green); font-weight: 700; font-size: 18px; }
