--- a/index.html
+++ b/index.html
@@ -423,29 +423,42 @@
                     Now Available in Canada &amp; USA
                 </div>
                 <h1>
-                    Replace the EAP.<br>
-                    <span class="gradient-text">Add Prevention.</span><br>
-                    Save Millions.
+                    Health Care Is Stuck on Break-Fix.<br>
+                    <span class="gradient-text">We Move It to Prevention.</span>
                 </h1>
+                <div style="font-size: clamp(14px, 2vw, 18px); font-weight: 300; letter-spacing: 0.25em; text-transform: uppercase; margin-bottom: 20px; color: rgba(255,255,255,0.7);">
+                    <span style="color: rgba(255,255,255,0.45);">Durand</span> <span style="font-weight: 500; color: #fff;">e</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
+                </div>
                 <p>
-                    Your clients&rsquo; EAP has 3% utilization and zero health intelligence. Replace it with an EHAP &mdash; same PEPM cost, but now your EAP includes 6 counseling sessions to get the right help plus a predictive health system that can see risks 5-10 years early with Durand&rsquo;s advanced testing not available in traditional labs. Avoid a fatal or expensive cardiac event, a late-stage cancer diagnosis through early intervention, or a failed GLP-1 outcome with a net weight gain after spending thousands of health care dollars. Just part of where the millions are saved.
+                    An advanced EAP integrated with the world&rsquo;s most advanced employer-grade predictive health testing and signal management. <strong style="color: #fff; font-weight: 600;">Saving millions</strong> in health care spend and below-the-line productivity losses.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary">Partner With Us</a>
-                    <a href="#" class="btn btn-outline" onclick="showPanel('longevity')">Get Tested &mdash; $499</a>
+                    <a href="#contact" class="btn btn-primary">See How It Works</a>
+                    <a href="#contact" class="btn btn-outline">Broker Partnership</a>
+                </div>
+                <div style="display: flex; gap: 24px; flex-wrap: wrap; margin-top: 32px;">
+                    <span style="font-size: 11px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: rgba(255,255,255,0.4);">Same PEPM</span>
+                    <span style="font-size: 11px; color: rgba(140,198,63,0.5);">&bull;</span>
+                    <span style="font-size: 11px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: rgba(255,255,255,0.4);">No New Budget Line</span>
+                    <span style="font-size: 11px; color: rgba(140,198,63,0.5);">&bull;</span>
+                    <span style="font-size: 11px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: rgba(255,255,255,0.4);">Radically Better Outcomes</span>
                 </div>
                 <div class="hero-stats">
                     <div>
+                        <div class="hero-stat-value">3%</div>
+                        <div class="hero-stat-label">Typical EAP Utilization</div>
+                    </div>
+                    <div>
                         <div class="hero-stat-value">40+</div>
-                        <div class="hero-stat-label">Health Risk Factors Assessed</div>
+                        <div class="hero-stat-label">Organ Systems Scored</div>
                     </div>
                     <div>
-                        <div class="hero-stat-value">30+</div>
-                        <div class="hero-stat-label">Wearable Integrations</div>
+                        <div class="hero-stat-value">5&ndash;10yr</div>
+                        <div class="hero-stat-label">Earlier Risk Detection</div>
                     </div>
                     <div>
-                        <div class="hero-stat-value">5 Yrs</div>
-                        <div class="hero-stat-label">Clinical Validation</div>
+                        <div class="hero-stat-value">$0</div>
+                        <div class="hero-stat-label">Incremental Cost</div>
                     </div>
                 </div>
             </div>
@@ -457,29 +470,36 @@
                     Now Available in Canada &amp; USA
                 </div>
                 <h1>
-                    Healthier Employees.<br>
-                    <span class="gradient-text">Lower Claims.</span><br>
-                    Same Budget.
+                    A Better EAP &mdash;<br>
+                    <span class="gradient-text">And So Much More.</span><br>
+                    For No More Money.
                 </h1>
+                <div style="font-size: clamp(14px, 2vw, 18px); font-weight: 300; letter-spacing: 0.25em; text-transform: uppercase; margin-bottom: 20px; color: rgba(255,255,255,0.7);">
+                    <span style="color: rgba(255,255,255,0.45);">Durand</span> <span style="font-weight: 500; color: #fff;">e</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
+                </div>
                 <p>
-                    Your EAP has 3% utilization. Replace it with an EHAP from Durand &mdash; same PEPM cost &mdash; and give your workforce predictive health intelligence that catches risks 5-10 years early. Fewer surprise claims. Healthier, more productive employees. Ask your benefits broker about the Durand EHAP.
+                    EAPs sit at 3% utilization &mdash; not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand eHAP starts with a genuinely better EAP &mdash; 6 counselling sessions, better access, better outcomes &mdash; then adds predictive health intelligence powered by advanced multiomic testing. Same PEPM. Fewer surprise claims. Healthier, more productive employees. Ask your broker.
                 </p>
                 <div class="hero-buttons">
-                    <a href="mailto:info@durandfuturehealth.com" class="btn btn-primary">Ask Your Broker About EHAP</a>
+                    <a href="mailto:info@durandfuturehealth.com" class="btn btn-primary">Ask Your Broker About eHAP</a>
                     <a href="#" class="btn btn-outline" onclick="showPanel('longevity')">Get Tested Personally &mdash; $499</a>
                 </div>
                 <div class="hero-stats">
                     <div>
-                        <div class="hero-stat-value">40+</div>
-                        <div class="hero-stat-label">Health Risks Identified Early</div>
+                        <div class="hero-stat-value">3%</div>
+                        <div class="hero-stat-label">Typical EAP Utilization</div>
                     </div>
                     <div>
-                        <div class="hero-stat-value">5-10 Yr</div>
-                        <div class="hero-stat-label">Predictive Risk Window</div>
+                        <div class="hero-stat-value">40+</div>
+                        <div class="hero-stat-label">Organ Systems Scored</div>
+                    </div>
+                    <div>
+                        <div class="hero-stat-value">5&ndash;10yr</div>
+                        <div class="hero-stat-label">Earlier Risk Detection</div>
                     </div>
                     <div>
                         <div class="hero-stat-value">$0</div>
-                        <div class="hero-stat-label">Incremental Cost to Employer</div>
+                        <div class="hero-stat-label">Incremental Cost</div>
                     </div>
                 </div>
             </div>
@@ -641,13 +661,13 @@
         <div class="section-inner">
             <div class="section-header">
                 <div class="section-label">For Benefits Brokers</div>
-                <h2 class="section-title">Built by Scientists &amp; Physicians.<br>Delivered Through You.</h2>
-                <p class="section-subtitle">Our team of physicians, lab scientists, and AI researchers have spent 5 years building a clinically validated predictive health system. Now, we're making it available through benefits brokers — at EAP pricing.</p>
+                <h2 class="section-title">A Better EAP &mdash; And So Much More.<br>For No More Money.</h2>
+                <p class="section-subtitle">EAPs are widely underutilized &mdash; most sit at 3% engagement. Not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand eHAP starts with a genuinely better EAP and then adds what no EAP was ever designed to do: predictive health intelligence.</p>
             </div>
 
             <div class="value-banner fade-in">
-                <h3>Same Price. 100x the Value.</h3>
-                <p>Most EAPs see 3-5% utilization. The Durand EHAP includes an Advanced EAP with 6 counseling sessions — plus epigenetic testing, AI health coaching, cognitive assessment, and care navigation. At the same PEPM.</p>
+                <h3>Same Spend. Smarter Spend. Less Spend Over Time.</h3>
+                <p>The Durand eHAP includes 6 counselling sessions through a national partner &mdash; better access, better matching, higher utilization &mdash; plus epigenetic testing across 40+ organ systems, AI health coaching, cognitive assessment, and care navigation. All at the same PEPM.</p>
             </div>
 
             <div class="card-grid" style="margin-top: 48px;">
@@ -854,9 +874,9 @@
     <section class="section section-dark">
         <div class="section-inner">
             <div class="section-header">
-                <div class="section-label" style="background: rgba(255,107,107,0.15); color: #ff6b6b;">The GLP-1 Trap</div>
-                <h2 class="section-title">She Lost the Weight.<br>Then She Lost Everything Else.</h2>
-                <p class="section-subtitle" style="color: rgba(255,255,255,0.85);">Well-meaning employers are spending billions on GLP-1 drugs with no long-term outcome management. The results are devastating.</p>
+                <div class="section-label" style="background: rgba(255,107,107,0.15); color: #ff6b6b;">Case in Point</div>
+                <h2 class="section-title">Billions on GLP-1s. No Outcome Plan.<br>That&rsquo;s Where the Millions Go.</h2>
+                <p class="section-subtitle" style="color: rgba(255,255,255,0.85);">Employers are spending thousands per employee on GLP-1 medications with no system to track whether they&rsquo;re working. The drug isn&rsquo;t the problem. The absence of intelligence around the drug is the problem.</p>
             </div>
 
             <div class="story-card fade-in" style="background: rgba(255,255,255,0.12); border: 1px solid rgba(255,255,255,0.22);">
@@ -910,7 +930,7 @@
                 </div>
             </div>
 
-            <div class="story-footer fade-in" style="color: rgba(255,255,255,0.92);">DFH doesn&rsquo;t just write prescriptions. We find care providers who are <em>long-term outcome focused</em> &mdash; offering the full range of treatments beyond pharmaceuticals to get better results and maximize health dollar ROI for the employer and insurer.</div>
+            <div class="story-footer fade-in" style="color: rgba(255,255,255,0.92);">Durand eHAP manages the signal &mdash; tracking outcomes, guiding interventions, and connecting the dots between spend and results. The full range of treatments beyond pharmaceuticals, to get better results and maximize health dollar ROI.</div>
         </div>
     </section>
 
@@ -1451,8 +1471,8 @@
 
 <!-- CTA (hidden on consumer panel) -->
 <section class="cta-section" id="contact">
-    <h2>Ready to Transform<br>Employee Health?</h2>
-    <p>Whether you're a broker, employer, or individual — our physicians and scientists would love to show you what predictive health intelligence can do.</p>
+    <h2>Same Spend. Smarter Spend.<br>Less Spend Over Time.</h2>
+    <p>Give your clients something they&rsquo;ve never had at renewal: a reason to believe next year will cost less. Not because benefits were cut &mdash; because disease was prevented.</p>
     <div class="cta-buttons">
         <a href="mailto:info@durandfuturehealth.com" class="btn btn-primary" style="font-size: 17px; padding: 16px 40px;">Contact Us</a>
         <a href="#" class="btn btn-outline" style="font-size: 17px; padding: 16px 40px;" onclick="showPanel('brokers'); window.scrollTo({top: document.getElementById('sectionTabs').offsetTop, behavior: 'smooth'});">Learn More</a>
