--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
                     Health Care Is Stuck on Break-Fix.<br>
                     <span class="gradient-text">We Move It to Prevention.</span>
                 </h1>
-                <div style="font-size: clamp(14px, 2vw, 18px); font-weight: 300; letter-spacing: 0.25em; text-transform: uppercase; margin-bottom: 20px; color: rgba(255,255,255,0.7);">
-                    <span style="color: rgba(255,255,255,0.45);">Durand</span> <span style="font-weight: 500; color: #fff;">E</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
+                <div style="font-size: clamp(16px, 2.2vw, 22px); font-weight: 300; letter-spacing: 0.25em; text-transform: uppercase; margin-bottom: 20px; color: rgba(255,255,255,0.7);">
+                    <span style="font-weight: 700; color: rgba(255,255,255,0.7);">Durand</span> <span style="font-weight: 500; color: #fff;">E</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
                 </div>
                 <p>
                     An advanced EAP integrated with the world&rsquo;s most advanced employer-grade predictive health testing and signal management. <strong style="color: #fff; font-weight: 600;">Saving millions</strong> in health care spend and below-the-line productivity losses.
@@ -474,14 +474,14 @@
                     <span class="gradient-text">And So Much More.</span><br>
                     For No More Money.
                 </h1>
-                <div style="font-size: clamp(14px, 2vw, 18px); font-weight: 300; letter-spacing: 0.25em; text-transform: uppercase; margin-bottom: 20px; color: rgba(255,255,255,0.7);">
-                    <span style="color: rgba(255,255,255,0.45);">Durand</span> <span style="font-weight: 500; color: #fff;">E</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
+                <div style="font-size: clamp(16px, 2.2vw, 22px); font-weight: 300; letter-spacing: 0.25em; text-transform: uppercase; margin-bottom: 20px; color: rgba(255,255,255,0.7);">
+                    <span style="font-weight: 700; color: rgba(255,255,255,0.7);">Durand</span> <span style="font-weight: 500; color: #fff;">E</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
                 </div>
                 <p>
                     EAPs sit at 3% utilization &mdash; not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better EAP &mdash; 6 counselling sessions, better access, better outcomes &mdash; then adds predictive health intelligence powered by advanced multiomic testing. Same PEPM. Fewer surprise claims. Healthier, more productive employees. Ask your broker.
                 </p>
                 <div class="hero-buttons">
-                    <a href="mailto:info@durandfuturehealth.com" class="btn btn-primary">Ask Your Broker About E<span style="color:#fff; font-weight:800;">H</span>AP</a>
+                    <a href="mailto:support@durand.life" class="btn btn-primary">Ask Your Broker About E<span style="color:#fff; font-weight:800;">H</span>AP</a>
                     <a href="#" class="btn btn-outline" onclick="showPanel('longevity')">Get Tested Personally &mdash; $499</a>
                 </div>
                 <div class="hero-stats">
@@ -552,7 +552,7 @@
                     Built by physicians and scientists. Led by executives who&rsquo;ve scaled globally. 4,000+ patients assessed. A platform that&rsquo;s built, not vaporware &mdash; and a mission to make predictive health accessible to everyone.
                 </p>
                 <div class="hero-buttons">
-                    <a href="mailto:info@durandfuturehealth.com" class="btn btn-primary">Get in Touch</a>
+                    <a href="mailto:support@durand.life" class="btn btn-primary">Get in Touch</a>
                     <a href="#" class="btn btn-outline" onclick="showPanel('brokers')">See Our Solutions</a>
                 </div>
                 <div class="hero-stats">
@@ -1252,8 +1252,8 @@
             <p style="color: rgba(255,255,255,0.88); font-size: 18px; max-width: 640px; margin: 0 auto 16px;">The Durand E<span style="color:#fff; font-weight:700;">H</span>AP is available exclusively through benefits brokers and advisors. Ask your broker about replacing your EAP with an E<span style="color:#fff; font-weight:700;">H</span>AP &mdash; at the same PEPM cost.</p>
             <p style="color: rgba(255,255,255,0.7); font-size: 15px; max-width: 540px; margin: 0 auto 32px;">Don&rsquo;t have a broker? We can connect you with one of our certified benefits partners in your region.</p>
             <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
-                <a href="mailto:info@durandfuturehealth.com" class="btn btn-primary" style="font-size: 17px; padding: 16px 36px;">Ask Your Broker About E<span style="color:#fff; font-weight:800;">H</span>AP</a>
-                <a href="mailto:info@durandfuturehealth.com?subject=Connect%20Me%20With%20a%20Broker" class="btn btn-outline" style="font-size: 15px; padding: 14px 28px;">Connect Me With a Broker</a>
+                <a href="mailto:support@durand.life" class="btn btn-primary" style="font-size: 17px; padding: 16px 36px;">Ask Your Broker About E<span style="color:#fff; font-weight:800;">H</span>AP</a>
+                <a href="mailto:support@durand.life?subject=Connect%20Me%20With%20a%20Broker" class="btn btn-outline" style="font-size: 15px; padding: 14px 28px;">Connect Me With a Broker</a>
             </div>
         </div>
     </section>
@@ -1474,7 +1474,7 @@
     <h2>Same Spend. Smarter Spend.<br>Less Spend Over Time.</h2>
     <p>Give your clients something they&rsquo;ve never had at renewal: a reason to believe next year will cost less. Not because benefits were cut &mdash; because disease was prevented.</p>
     <div class="cta-buttons">
-        <a href="mailto:info@durandfuturehealth.com" class="btn btn-primary" style="font-size: 17px; padding: 16px 40px;">Contact Us</a>
+        <a href="mailto:support@durand.life" class="btn btn-primary" style="font-size: 17px; padding: 16px 40px;">Contact Us</a>
         <a href="#" class="btn btn-outline" style="font-size: 17px; padding: 16px 40px;" onclick="showPanel('brokers'); window.scrollTo({top: document.getElementById('sectionTabs').offsetTop, behavior: 'smooth'});">Learn More</a>
     </div>
     <p style="margin-top: 24px; font-size: 13px; opacity: 0.5;">Available in Canada and the United States</p>
@@ -1506,7 +1506,7 @@
         <div>
             <h4>Company</h4>
             <a href="#" onclick="showPanel('about')">About Us</a>
-            <a href="mailto:info@durandfuturehealth.com">Contact</a>
+            <a href="mailto:support@durand.life">Contact</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
         </div>
