--- a/index.html
+++ b/index.html
@@ -326,6 +326,8 @@
 
         /* RESPONSIVE */
         @media (max-width: 968px) {
+            .employee-showcase { grid-template-columns: 1fr !important; text-align: center; }
+            .employee-showcase img { max-width: 400px; margin: 0 auto; }
             .hero-inner { grid-template-columns: 1fr; text-align: center; }
             .hero-visual { order: -1; }
             .dna-visual { width: 300px; height: 380px; }
@@ -681,6 +683,49 @@
             <div class="value-banner fade-in">
                 <h3>Same Spend. Smarter Spend. Less Spend Over Time.</h3>
                 <p>The Durand E<span style="color:#8CC63F;">H</span>AP includes 6 counselling sessions through a national partner &mdash; better access, better matching, higher utilization &mdash; plus epigenetic testing across 40+ organ systems, AI health coaching, cognitive assessment, and care navigation. All at the same PEPM.</p>
+            </div>
+
+            <!-- EMPLOYEE SHOWCASE -->
+            <div class="employee-showcase fade-in" style="display: grid; grid-template-columns: 1fr 1fr; gap: 48px; align-items: center; margin-top: 56px; background: linear-gradient(135deg, rgba(27,45,107,0.04), rgba(43,165,165,0.06)); border: 1px solid rgba(43,165,165,0.12); border-radius: 20px; padding: 40px; overflow: hidden;">
+                <div style="border-radius: 16px; overflow: hidden; box-shadow: 0 16px 48px rgba(0,0,0,0.12);">
+                    <img src="home-depot-lady.jpg" alt="Retail employee checking her health results on her phone" style="width: 100%; height: auto; display: block;">
+                </div>
+                <div>
+                    <div class="section-label" style="margin-bottom: 12px;">What She Gets With EHAP</div>
+                    <h3 style="font-family: var(--font-serif); font-size: clamp(22px, 3vw, 28px); font-weight: 700; color: var(--dark); line-height: 1.3; margin-bottom: 16px;">Her Employer Replaced Their EAP.<br>Now She Has a Health Intelligence System.</h3>
+                    <p style="color: var(--gray-500); font-size: 15px; line-height: 1.7; margin-bottom: 20px;">On her break, on her phone, in her language. Everything she needs to understand her health &mdash; and what&rsquo;s coming &mdash; without leaving the floor.</p>
+                    <ul style="list-style: none; padding: 0; display: flex; flex-direction: column; gap: 10px;">
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>6 counselling sessions</strong> &mdash; Advanced EAP through a national partner</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>Epigenetic testing</strong> &mdash; 40+ organ health scores from a painless home test</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>AI Health Agent</strong> &mdash; 24/7 coaching in 40+ languages, physician-supervised</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>Cognitive assessment</strong> &mdash; clinically validated brain health screening</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>5&ndash;10 year risk prediction</strong> &mdash; cancer, cardiac, metabolic, cognitive decline</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>Care navigation</strong> &mdash; GLP-1 outcomes, women&rsquo;s health, sleep, nutrition</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>30+ wearable integrations</strong> &mdash; Oura, Apple Watch, Fitbit, Garmin &amp; more</span>
+                        </li>
+                    </ul>
+                    <p style="color: var(--gray-500); font-size: 13px; margin-top: 16px; font-style: italic;">All included. Same PEPM. No extra cost to her or her employer.</p>
+                </div>
             </div>
 
             <div class="card-grid" style="margin-top: 48px;">
