--- a/index.html
+++ b/index.html
@@ -701,11 +701,15 @@
                         </li>
                         <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
                             <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
-                            <span><strong>Epigenetic testing</strong> &mdash; 40+ organ health scores from a painless home test</span>
+                            <span><strong>Home-based painless multiomic blood test</strong> &mdash; no nurse visit required</span>
                         </li>
                         <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
                             <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
-                            <span><strong>AI Health Agent</strong> &mdash; 24/7 coaching in 40+ languages, physician-supervised</span>
+                            <span><strong>Health intake &amp; family history</strong> &mdash; comprehensive baseline for personalized risk</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>Sleep &amp; cancer screenings</strong> &mdash; early detection across multiple risk factors</span>
                         </li>
                         <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
                             <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
@@ -717,11 +721,23 @@
                         </li>
                         <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
                             <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>Upload &amp; safely store health records</strong> &mdash; securely analyzed by AI</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>Secure AI chat</strong> &mdash; without revealing personal info, in 40+ languages</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
                             <span><strong>Care navigation</strong> &mdash; GLP-1 outcomes, women&rsquo;s health, sleep, nutrition</span>
                         </li>
                         <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
                             <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
                             <span><strong>30+ wearable integrations</strong> &mdash; Oura, Apple Watch, Fitbit, Garmin &amp; more</span>
+                        </li>
+                        <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
+                            <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
+                            <span><strong>Durand protects her health data</strong> &mdash; from resale, on behalf of her employer</span>
                         </li>
                     </ul>
                     <p style="color: var(--gray-500); font-size: 13px; margin-top: 16px; font-style: italic;">All included. Same PEPM. No extra cost to her or her employer.</p>
