--- a/index.html
+++ b/index.html
@@ -576,8 +576,8 @@
                         <div class="hero-stat-label">Patients Assessed</div>
                     </div>
                     <div>
-                        <div class="hero-stat-value">100%</div>
-                        <div class="hero-stat-label">AI-Native Platform</div>
+                        <div class="hero-stat-value">40+</div>
+                        <div class="hero-stat-label">Languages Supported</div>
                     </div>
                     <div>
                         <div class="hero-stat-value">30+</div>
@@ -650,10 +650,10 @@
     <div class="trust-bar-inner">
         <div class="trust-bar-label">Built with</div>
         <div class="trust-bar-items">
-            <div class="trust-bar-item"><div class="trust-bar-icon">&#129516;</div> 5,100+ Clinician Network</div>
+            <div class="trust-bar-item"><div class="trust-bar-icon">&#129516;</div> Physician-Led Clinical Team</div>
             <div class="trust-bar-item"><div class="trust-bar-icon" style="background:rgba(68,184,120,0.08);">&#128300;</div> Epigenetic Science</div>
             <div class="trust-bar-item"><div class="trust-bar-icon">&#128274;</div> HIPAA &amp; PIPEDA Compliant</div>
-            <div class="trust-bar-item"><div class="trust-bar-icon" style="background:rgba(68,184,120,0.08);">&#129302;</div> 100% AI-Native Platform</div>
+            <div class="trust-bar-item"><div class="trust-bar-icon" style="background:rgba(68,184,120,0.08);">&#129302;</div> AI-Powered Health Intelligence</div>
         </div>
     </div>
 </div>
@@ -1526,8 +1526,8 @@
                     <div class="stat-label" style="color: var(--gray-500);">Patients Assessed</div>
                 </div>
                 <div class="stat-box" style="background: var(--gradient-card); border-color: rgba(0,0,0,0.06);">
-                    <div class="stat-number" style="background: var(--gradient-brand); -webkit-background-clip: text;">100%</div>
-                    <div class="stat-label" style="color: var(--gray-500);">AI-Native Platform</div>
+                    <div class="stat-number" style="background: var(--gradient-brand); -webkit-background-clip: text;">40+</div>
+                    <div class="stat-label" style="color: var(--gray-500);">Languages Supported</div>
                 </div>
                 <div class="stat-box" style="background: var(--gradient-card); border-color: rgba(0,0,0,0.06);">
                     <div class="stat-number" style="background: var(--gradient-brand); -webkit-background-clip: text;">30+</div>
