--- a/index.html
+++ b/index.html
@@ -1094,14 +1094,14 @@
                 </div>
                 <div class="video-grid fade-in">
                     <div class="video-card">
-                        <iframe src="https://drive.google.com/file/d/1HBRlEd7k8YrH1OFSBkVcDYk34MhzLpW6/preview" width="100%" height="300" allow="autoplay" allowfullscreen style="border:none; border-radius: var(--radius) var(--radius) 0 0; display:block;"></iframe>
+                        <iframe src="https://www.youtube.com/embed/X1HbGdDq5-k" width="100%" height="300" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border:none; border-radius: var(--radius) var(--radius) 0 0; display:block;"></iframe>
                         <div class="video-card-info">
                             <h4>Your Health Journey</h4>
                             <p>AI-generated personalized health report in English</p>
                         </div>
                     </div>
                     <div class="video-card">
-                        <iframe src="https://drive.google.com/file/d/13613Tx3oe9OaGm2MyI4PhlOL04H2NmVz/preview" width="100%" height="300" allow="autoplay" allowfullscreen style="border:none; border-radius: var(--radius) var(--radius) 0 0; display:block;"></iframe>
+                        <iframe src="https://www.youtube.com/embed/mG1Lc0J5F6g" width="100%" height="300" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border:none; border-radius: var(--radius) var(--radius) 0 0; display:block;"></iframe>
                         <div class="video-card-info">
                             <h4>&#x092A;&#x093E;&#x0935;&#x0947;&#x0928; &#x0915;&#x093E; &#x0938;&#x094D;&#x0935;&#x093E;&#x0938;&#x094D;&#x0925;&#x094D;&#x092F; &#x0938;&#x092B;&#x093C;&#x0930;</h4>
                             <p>Same health intelligence, delivered in Hindi</p>
