--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     <a href="#contact" class="btn btn-outline">Broker Partnership</a>
                 </div>
                 <div style="display: flex; gap: 24px; flex-wrap: wrap; margin-top: 32px;">
-                    <span style="font-size: 11px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: rgba(255,255,255,0.4);">Same PEPM</span>
+                    <span style="font-size: 11px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: rgba(255,255,255,0.4);">Same PEPM (Per Employee Per Month) Cost</span>
                     <span style="font-size: 11px; color: rgba(140,198,63,0.5);">&bull;</span>
                     <span style="font-size: 11px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: rgba(255,255,255,0.4);">No New Budget Line</span>
                     <span style="font-size: 11px; color: rgba(140,198,63,0.5);">&bull;</span>
@@ -460,7 +460,7 @@
                 </div>
                 <div class="hero-stats">
                     <div>
-                        <div class="hero-stat-value">3%</div>
+                        <div class="hero-stat-value">3&ndash;5%</div>
                         <div class="hero-stat-label">Typical EAP Utilization</div>
                     </div>
                     <div>
@@ -493,7 +493,7 @@
                     <span style="font-weight: 700; color: rgba(255,255,255,0.7);">Durand</span> <span style="font-weight: 500; color: #fff;">E</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
                 </div>
                 <p>
-                    EAPs sit at 3% utilization &mdash; not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better EAP &mdash; 6 counselling sessions, better access, better outcomes &mdash; then adds predictive health intelligence powered by advanced multiomic testing. Same PEPM. Fewer surprise claims. Healthier, more productive employees. Ask your broker.
+                    EAPs sit at 3&ndash;5% utilization &mdash; not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better EAP &mdash; 6 counselling sessions, better access, better outcomes &mdash; then adds predictive health intelligence powered by advanced multiomic testing. Same PEPM. Fewer surprise claims. Healthier, more productive employees. Ask your broker.
                 </p>
                 <div class="hero-buttons">
                     <a href="mailto:support@durand.life" class="btn btn-primary">Ask Your Broker About E<span style="color:#fff; font-weight:800;">H</span>AP</a>
@@ -501,7 +501,7 @@
                 </div>
                 <div class="hero-stats">
                     <div>
-                        <div class="hero-stat-value">3%</div>
+                        <div class="hero-stat-value">3&ndash;5%</div>
                         <div class="hero-stat-label">Typical EAP Utilization</div>
                     </div>
                     <div>
@@ -677,7 +677,7 @@
             <div class="section-header">
                 <div class="section-label">For Benefits Brokers</div>
                 <h2 class="section-title">A Better EAP &mdash; And So Much More.<br>For No More Money.</h2>
-                <p class="section-subtitle">EAPs are widely underutilized &mdash; most sit at 3% engagement. Not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better EAP and then adds what no EAP was ever designed to do: predictive health intelligence.</p>
+                <p class="section-subtitle">EAPs are widely underutilized &mdash; most sit at 3&ndash;5% engagement. Not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better EAP and then adds what no EAP was ever designed to do: predictive health intelligence.</p>
             </div>
 
             <div class="value-banner fade-in">
@@ -823,7 +823,7 @@
                         <circle cx="86" cy="88" r="12" fill="rgba(255,107,107,0.35)"/>
                         <text x="86" y="93" text-anchor="middle" fill="rgba(255,107,107,0.85)" font-size="14">V</text>
                         <text x="108" y="84" fill="rgba(255,255,255,0.92)" font-size="11" font-weight="600" font-family="Inter, sans-serif">Vitality App</text>
-                        <text x="108" y="100" fill="rgba(255,255,255,0.78)" font-size="9" font-family="Inter, sans-serif">3% utilization</text>
+                        <text x="108" y="100" fill="rgba(255,255,255,0.78)" font-size="9" font-family="Inter, sans-serif">3-5% utilization</text>
                     </g>
 
                     <!-- Nutrition App -->
@@ -923,7 +923,7 @@
         <div class="section-inner">
             <div class="category-card fade-in">
                 <div class="section-label">Why E<span style="color:#8CC63F;">H</span>AP</div>
-                <h3 style="font-family: var(--font-serif); font-size: 26px; font-weight: 700; color: var(--dark); line-height: 1.3; margin-top: 12px;">E<span style="color:#8CC63F;">H</span>AP by Durand&reg; &mdash; Enhanced <u>E</u>AP + Proactive <u style="color:#8CC63F;">H</u>ealth Management</h3>
+                <h3 style="font-family: var(--font-serif); font-size: 26px; font-weight: 700; color: var(--dark); line-height: 1.3; margin-top: 12px;">E<span style="color:#8CC63F;">H</span>AP by Durand&reg; &mdash; Employee <u style="color:#8CC63F;">H</u>ealth <em>and</em> Assistance Plan</h3>
                 <p style="font-size: 16px; color: var(--gray-700); line-height: 1.8; margin-top: 16px;">North American employers spend <strong style="color: var(--dark);">$1.2 trillion annually</strong> on healthcare &mdash; almost entirely on <em>repair</em>. Treating disease after it arrives. Paying for surgeries, drugs, and disability after the damage is done. It&rsquo;s a crash repair world with no crash avoidance system.</p>
                 <div class="category-grid" style="margin-top: 24px;">
                     <div class="category-item" style="border-left: 3px solid #ff6b6b;">
@@ -1118,7 +1118,7 @@
             <div class="section-header">
                 <div class="section-label">vs. Blood-Only Testers</div>
                 <h2 class="section-title">Beyond Blood Panels</h2>
-                <p class="section-subtitle">Function, Nia, and SuperPower charge $499+ for lab-based blood tests mostly available free through insurance. We go far beyond blood.</p>
+                <p class="section-subtitle">Function, Nia, and SuperPower charge $499+ for lab-based blood tests in many cases largely covered by existing insurance. We go far beyond blood.</p>
             </div>
             <div style="overflow-x: auto;">
                 <table class="comparison-table fade-in">
@@ -1130,7 +1130,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>Testing Type</td><td>Blood panels (mostly free via insurance)</td><td class="highlight-col">Epigenetic testing — 40+ organ scores</td></tr>
+                        <tr><td>Testing Type</td><td>Blood panels (in many cases largely covered by insurance)</td><td class="highlight-col">Epigenetic testing — 40+ organ scores</td></tr>
                         <tr><td>Collection</td><td>In-person lab visits, 20 vials</td><td class="highlight-col">At-home, painless, mail-in</td></tr>
                         <tr><td>What It Shows</td><td>Where you are today (snapshot)</td><td class="highlight-col">Where you're headed — 5-10 year prediction</td></tr>
                         <tr><td>Cognitive Testing</td><td><span class="cross">&#10007;</span> None</td><td class="highlight-col"><span class="check">&#10003;</span> Clinically validated</td></tr>
@@ -1427,7 +1427,7 @@
             <div class="section-header">
                 <div class="section-label">Why Durand</div>
                 <h2 class="section-title">We Do What Others Can&rsquo;t</h2>
-                <p class="section-subtitle">Function Health charges $499 for lab-based blood tests you can get free through insurance. We go far beyond blood.</p>
+                <p class="section-subtitle">Function Health charges $499 for lab-based blood tests in many cases largely covered by existing insurance. We go far beyond blood.</p>
             </div>
             <div style="overflow-x: auto;">
                 <table class="comparison-table fade-in">
@@ -1439,7 +1439,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>Testing Type</td><td>Blood panels (mostly free via insurance)</td><td class="highlight-col">Epigenetic testing &mdash; 40+ organ scores</td></tr>
+                        <tr><td>Testing Type</td><td>Blood panels (in many cases largely covered by insurance)</td><td class="highlight-col">Epigenetic testing &mdash; 40+ organ scores</td></tr>
                         <tr><td>Collection</td><td>In-person lab visits, 20 vials</td><td class="highlight-col">At-home, painless, mail-in</td></tr>
                         <tr><td>What It Shows</td><td>Where you are today (snapshot)</td><td class="highlight-col">Where you&rsquo;re headed &mdash; 5-10 year prediction</td></tr>
                         <tr><td>Cognitive Testing</td><td><span class="cross">&#10007;</span> None</td><td class="highlight-col"><span class="check">&#10003;</span> Clinically validated</td></tr>
@@ -1476,7 +1476,9 @@
                 <p style="margin-bottom: 8px;">HSA/FSA eligibility varies by plan and is not guaranteed. We recommend consulting your plan administrator, HR department, or a qualified tax advisor to confirm that this assessment qualifies under your specific plan. Documentation is available upon request.</p>
                 <p style="margin-bottom: 8px;">Care navigation services are in development and will be offered at no additional cost when available. Features and availability may vary by geography.</p>
                 <p style="margin-bottom: 8px;">Durand Future Health does not provide tax, legal, or financial advice. We are not responsible for changes in regulations that may affect HSA or FSA eligibility.</p>
-                <p style="margin-bottom: 0;">Durand Future Health, Inc. (USA) &bull; Durand Future Health Ltd. (Canada)</p>
+                <p style="margin-bottom: 12px;">Durand Future Health, Inc. (USA) &bull; Durand Future Health Ltd. (Canada)</p>
+                <p style="margin-bottom: 8px;"><strong style="color: var(--gray-500);">EAP Utilization Sources</strong></p>
+                <p style="margin-bottom: 0;">Traditional Employee Assistance Program utilization is consistently reported at 2&ndash;5% across the industry. Sources include: the Society for Human Resource Management (SHRM); the Employee Assistance Professionals Association (EAPA); the National Business Group on Health; the U.S. Office of Personnel Management (OPM); Spring Health marketplace data (2025); and Uprise Health (2025). Usage-based EAP pricing models have been identified as a structural incentive contributing to low utilization. UK data from EAPA UK shows comparable patterns at approximately 5% access rates.</p>
             </div>
         </div>
     </section>
